tui-components/tests/snapshots/key_hint_snapshots__arrow_keys.snap
---
source: tests/key_hint_snapshots.rs
expression: "outputs.join(\"\\n---\\n\")"
---
"↑         "

---
"↓         "

---
"←         "

---
"→         "
