tui-components/tests/snapshots/key_hint_snapshots__ctrl_key.snap
---
source: tui-components/tests/key_hint_snapshots.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 1 },
    content: [
        "ctrl + c            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
