tui-components/tests/snapshots/key_hint_snapshots__page_keys.snap
---
source: "../../update-tui-snapshot-tests/tui-components/tests/key_hint_snapshots.rs"
expression: "format!(\"{buf1:?}\\n---\\n{buf2:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 10, height: 1 },
    content: [
        "pgup      ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
---
Buffer {
    area: Rect { x: 0, y: 0, width: 10, height: 1 },
    content: [
        "pgdn      ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
