tui-components/tests/snapshots/key_hint_snapshots__shift_key.snap
---
source: "../../update-tui-snapshot-tests/tui-components/tests/key_hint_snapshots.rs"
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 1 },
    content: [
        "shift + tab         ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
